--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
   - KERNEL=3.12.35
   - KERNEL=3.10.63
   - KERNEL=3.4.105
+  - KERNEL=2.6.33.20
   - KERNEL=2.6.32.65
 
 script: ./.travis/build.sh $OPTS
