datapath: test for netlink_set_err returning void
In v2.6.33 netlink_set_err returns void. However, 1a50307ba182 ("netlink:
fix NETLINK_RECV_NO_ENOBUFS in netlink_set_err()") was backported and
included in v2.6.33.2 and in that and subsequent v2.6.33 stable releases
netlink_set_err returns an int.

It seems plausible that there are other backports floating around. So check
for netlink_set_err returning void rather than including compatibility code
based on the version of the kernel.

Signed-off-by: Simon Horman <simon.horman@netronome.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
   - KERNEL=3.10.63
   - KERNEL=3.4.105
   - KERNEL=2.6.33.20
+  - KERNEL=2.6.33.1
   - KERNEL=2.6.32.65
 
 script: ./.travis/build.sh $OPTS
